# annotation-coding-environment

./: .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  INSTALL.md  LICENSE  README.md
.github/workflows/: pages.yml  release.yml
desktop/: .gitignore
desktop/launcher/: Cargo.toml  Packager.toml
desktop/launcher/icons/: icon.icns
desktop/launcher/src/: main.rs
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: main.rs
examples/ace-guide-manchester-folk-methods/: README.md  codebook.csv  sources.csv
scripts/: build_codebook_tree.sh  build_launcher_package.py  build_sidecar.py  check_headless_tree_sync.py
spikes/headless-tree/: README.md  build-assets.sh  index.html  spike.bundle.js  spike.css  spike.js
src/ace/: __main__.py  app.py
tests/: test_agreement_computer.py  test_agreement_routes.py  test_agreement_verdict.py  test_app.py  test_browser_runtime.py  test_chord_keys_e2e.py  test_code_view.py  test_codebook_palette.py  test_coding_routes.py  test_desktop_config.py  test_e2e_plan_a.py  test_import.py  test_importer_lazy_openpyxl.py  test_launcher_lifecycle.py  test_launcher_packager_config.py  test_native_picker.py  test_project.py  test_route_registration.py  test_runtime_routes.py  test_slash_commands_e2e.py  test_static_asset_contracts.py  test_status_helpers.py
tests/e2e/: conftest.py  test_agreement_file_review.py  (+20 more)
website/: _quarto.yml  getting-started.qmd  index.qmd  install.qmd  review-export.qmd  sample-data.qmd  styles.css  workflow.qmd
(+95 files in other folders)
