[package]
name = "ace-launcher"
version = "1.4.0"
edition = "2021"

[dependencies]
directories = "6"
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "3", default-features = false, features = ["json"] }
urlencoding = "2"
webbrowser = { version = "1", features = ["hardened"] }
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSApplication"] }
objc2-foundation = { version = "0.3", features = ["NSString"] }
